--- a/Coding with Python/Coding with Python.ipynb
+++ b/Coding with Python/Coding with Python.ipynb
@@ -49,8 +49,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +69,6 @@
     }
    ],
    "source": [
-    "#### Task 4\n",
-    "\n",
     "x = \"I\"\n",
     "y = \"like\"\n",
     "z = \"food\"\n",
@@ -72,8 +77,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,8 +98,6 @@
     }
    ],
    "source": [
-    "#### Task 5\n",
-    "\n",
     "num = 5\n",
     "\n",
     "print str(num) + \" \" + x + \" \" + y + \" \" + z\n",
@@ -95,8 +105,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 6"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -105,14 +122,12 @@
        "13"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#### Task 6\n",
-    "\n",
     "sentence = [str(num), x, y, z]\n",
     "sentence_string = \" \"\n",
     "sentence_string = sentence_string.join(sentence)\n",
@@ -122,8 +137,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 7"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -135,15 +157,20 @@
     }
    ],
    "source": [
-    "#### Task 7\n",
-    "\n",
     "half = len(sentence_string) / 2\n",
     "print sentence_string[0:half]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 8"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -155,16 +182,21 @@
     }
    ],
    "source": [
-    "#### Task 8\n",
-    "\n",
     "sentence_string = sentence_string.strip(\"5\")\n",
     "sentence_string = sentence_string.replace(\"food\", \"fries\")\n",
     "print sentence_string"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 9"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +208,6 @@
     }
    ],
    "source": [
-    "#### Task 9\n",
-    "\n",
     "new_sentence = sentence_string.split(\" \")\n",
     "new_half = len(new_sentence) / 2\n",
     "new_sentence.insert(new_half, \"really\")\n",
@@ -185,21 +215,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1st Quartile\n"
+      "2nd Quartile\n"
      ]
     }
    ],
    "source": [
-    "#### Task 10\n",
-    "\n",
     "import random\n",
     "\n",
     "x = random.randint(1, 100)\n",
@@ -214,8 +249,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 11"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +274,6 @@
     }
    ],
    "source": [
-    "#### Task 11\n",
-    "\n",
     "cities = [\"Seattle\", \"Kent\", \"Renton\", \n",
     "          \"Bothell\", \"Bellevue\", \"Tacoma\"]\n",
     "for city in cities :\n",
@@ -241,8 +281,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 12"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +308,6 @@
     }
    ],
    "source": [
-    "#### Task 12\n",
-    "\n",
     "states = [\"Washington\", \"California\", \"Nevada\", \"Idaho\", \n",
     "          \"Montana\", \"Utah\", \"Colorado\", \"New Mexico\"]\n",
     "paths = []\n",
@@ -274,8 +319,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 13"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -297,8 +349,6 @@
     }
    ],
    "source": [
-    "#### Task 13\n",
-    "\n",
     "i = 10\n",
     "while i >= 0 :\n",
     "    print \"T-minus \" + str(i)\n",
@@ -306,13 +356,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 14"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Task 14\n",
-    "\n",
     "def countdown(num) :\n",
     "    j = num\n",
     "    while j >= 0 :\n",
@@ -321,13 +376,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 15"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Task 15\n",
-    "\n",
     "def quartile_calc(num) :\n",
     "    if (num >= 0 and num <= 25) :\n",
     "        print \"1st Quartile\"\n",
@@ -340,20 +400,6 @@
     "    elif (num < 0 or num > 100) :\n",
     "        print \"Error\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
